--- a/templates/auth_form.html
+++ b/templates/auth_form.html
@@ -22,11 +22,11 @@
 	  <tr valign="top">
               <tr valign="top">
 	          <th scop="row">{{'Client id' | t}}</th>
-	          <td><input name="konzilocustom_client_id" type="text" value="{{client_id}}" /></td>
+	          <td><input name="konzilo_client_id" type="text" value="{{client_id}}" /></td>
 	      </tr>
 	      <tr valign="top">
 	          <th scop="row">{{'Client key' | t }}</th>
-	          <td><input name="konzilocustom_client_key" type="text" value="{{client_key}}" /></td>
+	          <td><input name="konzilo_client_key" type="text" value="{{client_key}}" /></td>
 	      </tr>
           </tr>
       </table>
