--- a/templates/social_form.html
+++ b/templates/social_form.html
@@ -1,75 +1,3 @@
 <div class="socialform">
-  <ul class="tabs">
-    <li><a href="#konzilo_text" class="active toggle-content">{{'Content' | t}}</a></li>
-    <li><a href="#konzilo_schedule" class="toggle-schedule">{{'Repeat entry' | t}}</a></li>
-  </ul>
-  <div class="content-form">
-    <label for="konzilo_text">{{'Description' | t}}</label>
-    <textarea class="text" name="konzilo_text">{{update.text}}</textarea>
-    <label for="channels">{{'Channels' | t}}</label>
-    <div class="channels">
-      {% for channel in channels%}
-      <label>
-        <input type="checkbox"
-               name="konzilo_channels[{{channel.id}}]"
-               data-profile="{{channel.id}}"
-               {{channel_checked(update, channel.id)}}/>
-        <span>{{channel.formatted_username}}</span>
-      </label>
-      {% endfor %}
-    </div>
-  </div>
-  <div class="schedule hide-if-js">
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          {% for item in header %}
-          <th>{{item.username}}</th>
-          {% endfor %}
-          <th>{{'Description for entry' | t}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for row in schedule %}
-        <tr>
-
-          <td>{{row.time}}</td>
-          {% for value in row.values%}
-          <td>
-            <input type="checkbox"
-                   name="schedule[{{value.id}}][{{value.value}}]"
-                   class="offset-profile-{{value.id}}-{{value.value}} offset-profile"
-                   value="{{value.value}}",
-                   {{ value.checked}} />
-          </td>
-          {% endfor %}
-          <td>
-            <input type="text"
-                   name="texts[{{row.offset}}]"
-                   class="offset-text-{{row.offset}} offset-text"
-                   value="{{texts[row.offset]}}"/>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <div class="info">
-      <p>{{'You can use the shortcodes to fetch content from the entry that will be published' | t}}</p>
-      <p>{{'You can use the following shortcodes:' | t}}</p>
-      <dl>
-
-        <dt>[description]</dt>
-        <dd>{{'The description from the entry' | t}}</dd>
-      </dl>
-      <dl>
-        <dt>[title]</dt>
-        <dd>{{'The entry title' | t }}</dd>
-      </dl>
-      <dl>
-        <dt>[author]</dt>
-        <dd>{{'The entry author' | t }}</dd>
-      </dl>
-    </div>
-  </div>
+  <iframe src="{{konzilo_url}}/edit/{{update.id}}" id="konzilo-iframe"></iframe>
 </div>
