--- a/templates/social_form.html
+++ b/templates/social_form.html
@@ -1,3 +1,3 @@
 <div class="socialform">
-  <iframe src="{{konzilo_url}}/edit/{{update.id}}" id="konzilo-iframe"></iframe>
+  <iframe src="{{konzilo_url}}/edit/{{update.id}}" id="konzilo-iframe" scrolling="no"></iframe>
 </div>
