--- a/templates/publish_form.html
+++ b/templates/publish_form.html
@@ -50,8 +50,9 @@
     <div id="timestampdiv" class="hide-if-js">
       {{touch_time(action)}}
     </div>
-
-    <a href="#konzilo-post-status" class="save-konzilo-status hide-if-no-js button">{{'OK' | t}}</a>
-    <a href="#konzilo-post-status" class="cancel-konzilo-status hide-if-no-js button-cancel">{{'Cancel' | t}}</a>
+    <div class="konzilo-post-choice">
+      <a href="#konzilo-post-status" class="save-konzilo-status hide-if-no-js button">{{'OK' | t}}</a>
+      <a href="#konzilo-post-status" class="cancel-konzilo-status hide-if-no-js button-cancel">{{'Cancel' | t}}</a>
+    </div>
   </div>
 </div>
