Send things through the CMS

--- a/templates/social_form.html
+++ b/templates/social_form.html
@@ -1,3 +1,4 @@
 <div class="socialform">
-  <iframe src="{{konzilo_url}}/edit/{{update.id}}" id="konzilo-iframe" scrolling="no"></iframe>
+  <input type="hidden" name="konzilo_update" id="konzilo-update" />
+  <iframe src="{{link}}" id="konzilo-iframe" scrolling="no"></iframe>
 </div>
